<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/QuestionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:gravity="center"
                android:text="@string/str1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:gravity="center"
                android:text="@string/str2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonTrue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonTrue" />

            <Button
                android:id="@+id/buttonFalse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonFalse" />

        </LinearLayout>

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:drawableEnd="@drawable/ic_next"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:text="@string/buttonNext" />
        <Button
            android:id="@+id/button_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonAnswer" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>